tests/ui/parser/misspelled-keywords/assoc-type.rs
trait Animal {
    Type Result = u8;
    //~^ ERROR expected one of
}

fn main() {}
